[metadata]
name = slip-control
description = Spring Loaded Inverted Pendulum control and visualization python tools
long_description = file: README.md
long_description_content_type = text/markdown
author = Daniel Ordonez
author_email = daniel.ordonez@gmail.com
version = 0.0.1
license = MIT
license_files = LICENSE
url = https://github.com/Danfoa/slip_control

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scipy
    matplotlib
    tqdm
    cvxpy
